@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0


class RegisterCheckUpUI {
    -CheckUpController()
    +run()
    +RegisterCheckUpUI()
    -requestRegistrationPlate()
    -requestCheckUpDate()
    -requestKmAtLastCheckUp()
    -submitData(registrationPlate, checkUpDate, kmAtLastCheckUp)
}

class CheckUpController {
    -getVehicleRepository()
    +CheckUpController(getVehicleRepository)
    +getInstance()
    +registerCheckUp(licensePlate: String, checkUpDate: Date, kmAtCheckUp: double)
}

class Repositories {
    -VehicleRepository
    -Repositories()
    +getInstance()
    +getVehicleRepository()
}

class VehicleRepository {
    +List<Vehicle>
    +getVehicle(String registrationPlate)
    +getVehicles(ArrayList<>(vehiclesList))
    +updateVehicle()
    +existsVehicle()
    +add()
    +validateVehicle()
}

class Vehicle {
    - registrationPlate : String
    - currentKm : double
    - checkUpKmFrequency : double
    - kmAtLastCheckUp : double
    - checkUpKm : double
    -validateVehicle(String registrationPlate)
    +registerCheckUp(double kmAtLastCheckUp, Date checkUpDate)
    +isCheckUpDue()
    +getCheckUpList()
    +compareTo()
}

class checkUp {
- kmAtLastCheckUp : double
- checkUpDate : Date
+ CheckUp(double kmAtLastCheckUp, Date checkUpDate)
+ getKmAtLastCheckUp()
+ getCheckUpDate()
}


RegisterCheckUpUI "1" ..> "1" CheckUpController
CheckUpController "1" ..> "1" Repositories
Repositories "1" -> "1" VehicleRepository
VehicleRepository "1" --> "*" Vehicle
Vehicle "1" --> "*" checkUp : registerCheckUp
CheckUpController "1" ..> "*" Vehicle
CheckUpController "1" ---> "1" VehicleRepository
Repositories --> Repositories : instance

@enduml